--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -1,23 +1,34 @@
-<div class="calculator">
+<h1 class="title">Calculator</h1>
 
+<div class="calculator">
     <form>
-    <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span> 
-    <input id="operator1" [(ngModel)]="operator1" type="number" class="form-control operator1" name="operator1" placeholder="0.0">
-    </div>
-    <br>
-    <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-    <input id="operator2" [(ngModel)]="operator2" type="number" class="form-control operator2" name="operator2" placeholder="0.0">
-    </div>
+        <div id="inputs-operators" class="input-group">
+          <span class="input-group-addon">Numero 1 : </span>
+          <input id="operator1" [(ngModel)]="operator1" type="number" class="form-control operator1" name="operator1">
+        </div>
+        <br>
+        <div class="input-group">
+            <span class="input-group-addon">Numero 2 : </span>
+            <input id="operator2" [(ngModel)]="operator2" type="number" class="form-control operator2" name="operator2">
+        </div>
     </form>
     <br>
-    <i class="glyphicon glyphicon-plus addition-button"
-    (click)="addition()"></i>
-    
-    <i class="glyphicon glyphicon-minus substraction-button"
-    (click)="substraction()"></i>
-    
+    <div id="btn-operations" class="btn-group btn-group-lg">
+        <button type="button" class="btn btn-primary addition-button" (click)="addition()" >Sumar</button>
+        <button type="button" class="btn btn-primary substraction-button" (click)="substraction()">Restar</button>
+        <button type="button" class="btn btn-primary multiplication-button" (click)="multiplication()">Multiplicar</button>
+        <button type="button" class="btn btn-primary divition-button" (click)="divition()">Dividir</button>
+        <button type="button" class="btn btn-primary exp-button" (click)="exp()">Exp</button>
+        <button type="button" class="btn btn-primary sqrt-button" (click)="sqr()">Sqr</button>
+        <button type="button" class="btn btn-primary sqrt-button" (click)="sqrt()">Sqrt</button>
+     </div>
+     <br>
+     <br>
+     <div id="result-operations" class="input-group">
+        <input type="text" class="form-control" placeholder="El resultado es : "/>
+        <span class="input-group-addon">
+            <span class="result">{{ result }}</span>
+        </span>
+     </div>
     </div>
     
-    <span class="result">{{ result }}</span>
